# alice

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  history.txt  rust-toolchain.toml
alice/: Cargo.toml
asys/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/connection/: mod.rs
core/src/database_manager/: database.rs  mod.rs
core/src/security/: mod.rs
core/src/transactions/: mod.rs
core/src/types/: mod.rs
inmem_engine/: Cargo.toml
inmem_engine/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: global_commands.pest  lib.rs  main.rs
