[package]
name = "Analyrical"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
pest = "2.8.6"
pest_derive = "2.8.6"
ratatui = "0.30.0"
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16.2"
tui-input = "0.15.3"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
