[workspace]
resolver = "3"
members = [
    "."
, "alice"]

[workspace.package]
authors = ["Ermolaev Daniil Denisovich <twofaced-janus@yandex.ru>"]
edition = "2024"
license-file = "LICENSE"
publish = false
version = "0.0.1-alpha"
description = "Simple database"
homepage = "https://github.com/TwoFacedJanus/alice"
keywords = [
    "database"
]
categories = ["database"]
repository = "https://github.com/TwoFacedJanus/alice.git"

[package]
name = "alice"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
