[workspace]
members = [
	"server",
	"core"
, "client", "inmem_engine", "asys"]

[workspace.dependencies]
dotenv = "0.15.0"
env_logger = "0.11.10"
futures = "0.3.32"
tokio = { version = "1.52.1", features = ["full"] }
md-5 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["serde", "v4"] }

core = { path = "core" }
